RESOLVED FIXED208445
Fix JSC 32bit alignment increase gcc warning
https://bugs.webkit.org/show_bug.cgi?id=208445
Summary Fix JSC 32bit alignment increase gcc warning
Paulo Matos
Reported 2020-03-02 05:56:32 PST
Fix JSC 32bit alignment increase gcc warning
Attachments
Patch (7.00 KB, patch)
2020-03-02 05:58 PST, Paulo Matos
no flags
Paulo Matos
Comment 1 2020-03-02 05:58:29 PST
Caio Lima
Comment 2 2020-03-02 07:08:45 PST
Comment on attachment 392136 [details] Patch LGTM!
Yusuke Suzuki
Comment 3 2020-03-02 11:01:27 PST
Comment on attachment 392136 [details] Patch r=me
WebKit Commit Bot
Comment 4 2020-03-02 11:47:00 PST
Comment on attachment 392136 [details] Patch Clearing flags on attachment: 392136 Committed r257721: <https://trac.webkit.org/changeset/257721>
WebKit Commit Bot
Comment 5 2020-03-02 11:47:02 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2020-03-02 11:47:19 PST
Note You need to log in before you can comment on or make changes to this bug.