Fix JSC 32bit alignment increase gcc warning https://bugs.webkit.org/show_bug.cgi?id=208445

Patch by Paulo Matos <pmatos@igalia.com> on 2020-03-02
Reviewed by Yusuke Suzuki.

Use reinterpret_cast_ptr<>() instead of reinterpret_cast<>() to
avoid GCC warning about increase in alignment requirement for cast
target type.

Source/JavaScriptCore:

* dfg/DFGOSRExit.cpp:
(JSC::DFG::OSRExit::compileExit):

Source/WTF:

* wtf/HashTable.h:
(WTF::HashTable::tableSize const):
(WTF::HashTable::setTableSize const):
(WTF::HashTable::tableSizeMask const):
(WTF::HashTable::setTableSizeMask):
(WTF::HashTable::keyCount const):
(WTF::HashTable::setKeyCount const):
(WTF::HashTable::deletedCount const):
(WTF::HashTable::setDeletedCount const):
(WTF::KeyTraits>::allocateTable):
(WTF::KeyTraits>::deallocateTable):

Canonical link: https://commits.webkit.org/221380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257721 268f45cc-cd09-0410-ab3c-d52691b4dbfc